tests/baselines/reference/exportAsNamespace_exportAssignment.errors.txt
//// [tests/cases/conformance/es2020/modules/exportAsNamespace_exportAssignment.ts] ////

b.ts(1,21): error TS2498: Module '"a"' uses 'export =' and cannot be used with 'export *'.


==== a.ts (0 errors) ====
    export = {}
    
==== b.ts (1 errors) ====
    export * as ns from './a';
                        ~~~~~
!!! error TS2498: Module '"a"' uses 'export =' and cannot be used with 'export *'.
    